--- a/src/transition.qmd
+++ b/src/transition.qmd
@@ -1,1 +1,20 @@
 # Tabelul tranzitiilor
+
+| Q~3~^t^ | Q~2~^t^ | Q~1~^t^ | Q~0~^t^ | Q~3~^t+1^ | Q~2~^t+1^ | Q~1~^t+1^ | Q~0~^t+1 | Exits |
+|:-------:|:-------:|:-------:|:-------:|:---------:|:---------:|:---------:|:--------:|:------|
+| 0 | 0 | 0 | 0 | 0 | 0 | 0 | ACT | 0 |
+| 0 | 0 | 0 | 1 | 0 | MAN | <code style="text-decoration:overline">MAN</code> | 1 | 0 |
+| 0 | 0 | 1 | 0 | 1 | 1 | 0 | 0 | <code style="text-decoration:overline">FIRE</code> |
+| 0 | 0 | 1 | 1 | 0 | DET | DET | DET | 0 |
+| 0 | 1 | 0 | 0 | 0 | 0 | <code style="text-decoration:overline">T_O</code> | 0 | 0 |
+| 0 | 1 | 0 | 1 | INST | INST | 0 | INST | 0 |
+| 0 | 1 | 1 | 0 | 0 | 0 | CAN_FIRE | 0 | 0 |
+| 0 | 1 | 1 | 1 | 1 | 1 | 1 | 1 | <code style="text-decoration:overline">DAT</code> |
+| 1 | 0 | 0 | 0 | * | * | * | * | * |
+| 1 | 0 | 0 | 1 | 1 | 0 | 1 | 0 | <code style="text-decoration:overline">DAT</code> |
+| 1 | 0 | 1 | 0 | 0 | 1 | 1 | 0 | <code style="text-decoration:overline">LOG</code> |
+| 1 | 0 | 1 | 1 | 0 | 0 | 0 | 1 | <code style="text-decoration:overline">LOG</code> |
+| 1 | 1 | 0 | 0 | STATUS | <code style="text-decoration:overline">STATUS</code> | STATUS | STATUS | 0 |
+| 1 | 1 | 0 | 1 | 1 | 0 | 0 | 1 | <code style="text-decoration:overline">RCV</code> | 
+| 1 | 1 | 1 | 0 | 0 | ON_SIGHT | 1 | <code style="text-decoration:overline">ON_SIGHT</code> | 0 |
+| 1 | 1 | 1 | 1 | 1 | 1 | 1 | 0 | <code style="text-decoration:overline">LOG</code> | 
