--- a/src/results.qmd
+++ b/src/results.qmd
@@ -1,1 +1,94 @@
 # Diagrame de Stare & Ecuatii Rezultate
+
+## Q~3~^t+1^ 
+
+| Q~3~Q~2~ \\ Q~1~Q~0~ | 00 | 01 | 11 | 10 |
+|:--------------------:|:--:|:--:|:--:|:--:|
+| 00 | 0 | 0 | 0 | 1 |
+| 01 | 0 | INST | 1 | 0 |
+| 11 | STATUS | 1 | 1 | 0 |
+| 10 | * | 1 | 0 | 0 |
+
+$Q_3^{t+1} = \overline{Q_3} \space \overline{Q_2}Q_1Q_0 + Q_2Q_1Q_0 + Q_3\overline{Q_1}Q_0 + \text{STATUS} Q_3\overline{Q_1} + \text{INST} Q_2Q_0$
+
+## Q~2~^t+1^ 
+
+| Q~3~Q~2~ \\ Q~1~Q~0~ | 00 | 01 | 11 | 10 |
+|:--------------------:|:--:|:--:|:--:|:--:|
+| 00 | 0 | MAN | DET | 1 |
+| 01 | 0 | INST | 1 | 0 |
+| 11 | $\overline{\text{STATUS}}$ | 0 | 1 | ON_SIGHT |
+| 10 | * | 0 | 0 | 1 |
+
+$Q_2^{t+1} = \overline{Q_2}Q_1\overline{Q_0} + Q_2Q_1Q_0 + \text{ON\_SIGHT} Q_3Q_1\overline{Q_0} + \text{MAN} \overline{Q_3} \space \overline{Q_2}\space\overline{Q_1}Q_0
++ \text{DET}\overline{Q_3}Q_1Q_0 + \text{INST}\overline{Q_3}Q_2Q_0 + \overline{\text{STATUS}}Q_3\overline{Q_1}\space\overline{Q_0}$ 
+
+## Q~1~^t+1^ 
+
+| Q~3~Q~2~ \\ Q~1~Q~0~ | 00 | 01 | 11 | 10 |
+|:--------------------:|:--:|:--:|:--:|:--:|
+| 00 | 0 | $\overline{\text{MAN}}$ | DET | 0 |
+| 01 | $\overline{\text{T\_O}}$ | 0 | 1 | CAN_FIRE |
+| 11 | STATUS | 0 | 1 | 1 |
+| 10 | * | 1 | 0 | 1 |
+
+$Q_1^{t+1} = Q_3Q_1\overline{Q_0} + Q_2Q_1Q_0 + Q_3\overline{Q_2}\space\overline{Q_1} + \overline{\text{T\_O}}\space\overline{Q_3}Q_2\overline{Q_1}\space\overline{Q_0}
++ \text{STATUS}Q_3\overline{Q_1}\space\overline{Q_0} + \overline{\text{MAN}}\space\overline{Q_2}\space\overline{Q_1}Q_0 + \text{DET}\overline{Q_3}Q_1Q_0 +
+\text{CAN\_FIRE}Q_2Q_1$
+
+## Q~0~^t+1^ 
+
+| Q~3~Q~2~ \\ Q~1~Q~0~ | 00 | 01 | 11 | 10 |
+|:--------------------:|:--:|:--:|:--:|:--:|
+| 00 | ACT | 1 | DET | 0 |
+| 01 | 0 | INST | 1 | 0 |
+| 11 | STATUS | 1 | 0 | $\overline{\text{ON\_SIGHT}}$ |
+| 10 | * | 0 | 1 | 0 |
+
+$Q_0^{t+1} = Q_3\overline{Q_2}Q_1Q_0 + \overline{Q_3}Q_2Q_1Q_0 + \overline{Q_3}\space\overline{Q_2}\space\overline{Q_1}Q_0 + Q_3Q_2\overline{Q_1}Q_0 +
+\overline{\text{ON\_SIGHT}}Q_3Q_2Q_1\overline{Q_0} + \text{DET}\overline{Q_3}Q_1Q_0 + \text{ACT}\overline{Q_3}\space\overline{Q_2}\space\overline{Q_1} +
+\text{INST}Q_2\overline{Q_1}Q_0 + \text{STATUS}Q_3\overline{Q_1}\space\overline{Q_0}$
+
+## DAT
+
+| Q~3~Q~2~ \\ Q~1~Q~0~ | 00 | 01 | 11 | 10 |
+|:--------------------:|:--:|:--:|:--:|:--:|
+| 00 | 0 | 0 | 0 | 0 |
+| 01 | 0 | 0 | 1 | 0 |
+| 11 | 0 | 0 | 0 | 0 |
+| 10 | * | 1 | 0 | 0 |
+
+$\text{DAT} = \overline{Q_3}Q_2Q_1Q_0 + Q_3\overline{Q_2}\space\overline{Q_1}$
+
+## RCV
+
+| Q~3~Q~2~ \\ Q~1~Q~0~ | 00 | 01 | 11 | 10 |
+|:--------------------:|:--:|:--:|:--:|:--:|
+| 00 | 0 | 0 | 0 | 0 |
+| 01 | 0 | 0 | 0 | 0 |
+| 11 | 0 | 1 | 0 | 0 |
+| 10 | * | 0 | 0 | 0 |
+
+$\text{RCV} = Q_3Q_2\overline{Q_1}Q_0$
+
+## LOG
+
+| Q~3~Q~2~ \\ Q~1~Q~0~ | 00 | 01 | 11 | 10 |
+|:--------------------:|:--:|:--:|:--:|:--:|
+| 00 | 0 | 0 | 0 | 0 |
+| 01 | 0 | 0 | 0 | 0 |
+| 11 | 0 | 0 | 1 | 0 |
+| 10 | * | 0 | 1 | 1 |
+
+$\text{LOG} = Q_3Q_1Q_0 + Q_3\overline{Q_2}Q_1$
+
+## FIRE
+
+| Q~3~Q~2~ \\ Q~1~Q~0~ | 00 | 01 | 11 | 10 |
+|:--------------------:|:--:|:--:|:--:|:--:|
+| 00 | 0 | 0 | 0 | 1 |
+| 01 | 0 | 0 | 0 | 0 |
+| 11 | 0 | 0 | 0 | 0 |
+| 10 | * | 0 | 0 | 0 |
+
+$\text{FIRE} = \overline{Q_3}\space\overline{Q_2}Q_1\overline{Q_0}$
