--- a/src/results.qmd
+++ b/src/results.qmd
@@ -9,7 +9,7 @@
 | 11 | STATUS | 1 | 1 | 0 |
 | 10 | * | 1 | 0 | 0 |
 
-$Q_3^{t+1} = \overline{Q_3} \space \overline{Q_2}Q_1Q_0 + Q_2Q_1Q_0 + Q_3\overline{Q_1}Q_0 + \text{STATUS} Q_3\overline{Q_1} + \text{INST} Q_2Q_0$
+$Q_3^{t+1} = \overline{Q_3} \space \overline{Q_2}Q_1\overline{Q_0} + Q_2Q_1Q_0 + Q_3\overline{Q_1}Q_0 + \text{STATUS} Q_3\overline{Q_1} + \text{INST} Q_2Q_0$
 
 ## Q~2~^t+1^ 
 
