--- a/src/transition.qmd
+++ b/src/transition.qmd
@@ -1,7 +1,7 @@
 # Tabelul tranzitiilor
 
-| Q~3~^t^ | Q~2~^t^ | Q~1~^t^ | Q~0~^t^ | Q~3~^t+1^ | Q~2~^t+1^ | Q~1~^t+1^ | Q~0~^t+1 | Exits |
-|:-------:|:-------:|:-------:|:-------:|:---------:|:---------:|:---------:|:--------:|:------|
+| Q~3~^t^ | Q~2~^t^ | Q~1~^t^ | Q~0~^t^ | Q~3~^t+1^ | Q~2~^t+1^ | Q~1~^t+1^ | Q~0~^t+1^ | Exits |
+|:-------:|:-------:|:-------:|:-------:|:---------:|:---------:|:---------:|:--------:|:------:|
 | 0 | 0 | 0 | 0 | 0 | 0 | 0 | ACT | 0 |
 | 0 | 0 | 0 | 1 | 0 | MAN | <span style="text-decoration:overline">MAN</span> | 1 | 0 |
 | 0 | 0 | 1 | 0 | 1 | 1 | 0 | 0 | <span style="text-decoration:overline">FIRE</span> |
