Add block scheme to implementation section
Signed-off-by: RagnarokMew <101945097+RagnarokMew@users.noreply.github.com>

--- a/src/implementation.qmd
+++ b/src/implementation.qmd
@@ -1,13 +1,13 @@
 # Implementare
 
-## Schema Bloc
-
-!TODO: Add block scheme
-
 Automatul a fost implementat pe 4 biți care codifică 4 variabile de stare: Q~3~ (cel mai semnificativ), Q~2~, Q~1~, Q~0~. Variabilele de stare codifică 15 
 stări pe care automatul le poate avea. Semnalele active pe 1.
 
-## Stări:
+## Schema Bloc
+
+![Schema Bloc Automat](./../img/block_scheme.png)
+
+## Stări
 
 * INACTIVE (0000) = Aparatul este oprit
 * ACTIVE (0001) = Aparatul este activ în așteptare
@@ -25,7 +25,7 @@ stări pe care automatul le poate avea. Semnalele active pe 1.
 * WAIT_FIRE (0100) = Aparatul așteaptă pornirea mitralierei
 * STAT_FIRE (1011) = Aparatul a impușcat individul/obiectul
 
-## Semnale Decizii:
+## Semnale Decizii
 
 * ACT = Instrucțiunea de decizie prin care un dispozitiv auxiliar pornește sau oprește automatul
 * MAN = Instrucțiunea de decizie prin care un utilizator alege dacă automatul funcționează automat sau prin instrucțiuni primite remote
@@ -36,7 +36,7 @@ stări pe care automatul le poate avea. Semnalele active pe 1.
 * STATUS = Instrucțiunea de decizie prin care se verifică dacă mitraliera a început să tragă
 * T_O = Instrucțiunea de decizie (timer) prin care se verifică dacă a trecut perioada de timp în care trebuia să se pornească mitraliera (time_out)
 
-## Semnale Ieșiri:
+## Semnale Ieșiri
 
 * DAT = Automatul transmite informațiile primite de la senzor către modulul de țintire
 * RCV = Automatul primește instrucțiunile trimise remote
