--- a/src/entry_cbb.qmd
+++ b/src/entry_cbb.qmd
@@ -58,7 +58,7 @@ $K_1 = \overline{Q_3}\ \overline{Q_2}\ \overline{Q_0} + \overline{\text{DET}}\ \
 
 Pentru a implementa cu porți NOR am negat de 2 ori fiecare minterm
 
-$K_1 = \overline{Q_3+Q_2+Q_0} + \overline{\text{DET}+Q_3+Q_2} + \overline{\text{CAN\_FIRE} + Q_3 + Q_0}$
+$K_1 = \overline{\overline{Q_3+Q_2+Q_0} + \overline{\text{DET}+Q_3+Q_2} + \overline{\text{CAN\_FIRE} + Q_3 + Q_0}}$
 
 ## Q~2~
 
