--- a/src/entry_cbb.qmd
+++ b/src/entry_cbb.qmd
@@ -4,6 +4,19 @@
 
 Implementat printr-un CBB tip D și un Mux 16:1
 
+### D~0~ 
+
+| Q~3~Q~2~ \\ Q~1~Q~0~ | 00 | 01 | 11 | 10 |
+|:--------------------:|:--:|:--:|:--:|:--:|
+| 00 | ACT | 1 | DET | 0 |
+| 01 | 0 | INST | 1 | 0 |
+| 11 | STATUS | 1 | 0 | $\overline{\text{ON\_SIGHT}}$ |
+| 10 | * | 0 | 1 | 0 |
+
+$D_0 = Q_3\overline{Q_2}Q_1Q_0 + \overline{Q_3}Q_2Q_1Q_0 + \overline{Q_3}\ \overline{Q_2}\ \overline{Q_1}Q_0 + Q_3Q_2\overline{Q_1}Q_0 +
+\overline{\text{ON\_SIGHT}}Q_3Q_2Q_1\overline{Q_0} + \text{DET}\overline{Q_3}Q_1Q_0 + \text{ACT}\overline{Q_3}\ \overline{Q_2}\ \overline{Q_1} +
+\text{INST}Q_2\overline{Q_1}Q_0 + \text{STATUS}Q_3\overline{Q_1}\ \overline{Q_0}$
+
 ## Q~1~
 
 Implementat printr-un CBB de tip JK; J implementat cu porți NAND și K implementat cu porți NOR
@@ -176,4 +189,4 @@ $\text{Intrarea 110:}\ \overline{\text{STATUS}}\ \overline{Q_0}$
 
 #### Q~3~Q~2~Q~1~ = 111
 
-$\text{Intrarea 111:}\ Q_0$
+$\text{Intrarea 111:}\ \overline{Q_0}$
