--- a/src/entry_cbb.qmd
+++ b/src/entry_cbb.qmd
@@ -17,6 +17,8 @@ $D_0 = Q_3\overline{Q_2}Q_1Q_0 + \overline{Q_3}Q_2Q_1Q_0 + \overline{Q_3}\ \over
 \overline{\text{ON\_SIGHT}}Q_3Q_2Q_1\overline{Q_0} + \text{DET}\overline{Q_3}Q_1Q_0 + \text{ACT}\overline{Q_3}\ \overline{Q_2}\ \overline{Q_1} +
 \text{INST}Q_2\overline{Q_1}Q_0 + \text{STATUS}Q_3\overline{Q_1}\ \overline{Q_0}$
 
+![Implementare Q0](./../img/Q0.png)
+
 ## Q~1~
 
 Implementat printr-un CBB de tip JK; J implementat cu porți NAND și K implementat cu porți NOR
@@ -73,6 +75,8 @@ Pentru a implementa cu porți NOR am negat de 2 ori fiecare minterm
 
 $K_1 = \overline{Q_3+Q_2+Q_0} + \overline{\overline{Q_3} + Q_2 + \overline{Q_0}} + \overline{\text{DET}+Q_3+Q_2} + \overline{\text{CAN\_FIRE} + Q_3 + Q_0}$
 
+![Implementare Q1](./../img/Q1.png)
+
 ## Q~2~
 
 Implementat printr-un CBB de tip D și un Mux 2:1.
@@ -96,6 +100,8 @@ $\text{Intrarea 0:}\ Q_2Q_1Q_0 + \overline{Q_2}Q_1\overline{Q_0} + \text{DET}\ov
 | 1 | * | 0 | 0 | 1 |
 
 $\text{Intrarea 1:}\ \overline{Q_2}Q_1Q_0 + Q_2\overline{Q_0} + \overline{\text{STATUS}}\ \overline{Q_1}\ \overline{Q_0} + \text{ON\_SIGHT}Q_1\overline{Q_0}$
+
+![Implementare Q2](./../img/Q2.png)
 
 ## Q~3~
 
@@ -190,3 +196,5 @@ $\text{Intrarea 110:}\ \overline{\text{STATUS}}\ \overline{Q_0}$
 #### Q~3~Q~2~Q~1~ = 111
 
 $\text{Intrarea 111:}\ \overline{Q_0}$
+
+![Implementare Q3](./../img/Q3.png)
