Add missing diacritics
Signed-off-by: RagnarokMew <101945097+RagnarokMew@users.noreply.github.com>

--- a/src/functionality.qmd
+++ b/src/functionality.qmd
@@ -1,4 +1,4 @@
-# Functionalitate
+# Funcționalitate
 
 Automatul pornește în starea ``INACTIVE`` în care este oprit. Acesta se activează când primeste semnalul de pornire (``ACT``) și ajunge în starea ``ACTIVE``.
 
