--- a/src/transition.qmd
+++ b/src/transition.qmd
@@ -1,4 +1,4 @@
-# Tabelul tranzitiilor
+# Tabelul tranzițiilor
 
 | Q~3~^t^ | Q~2~^t^ | Q~1~^t^ | Q~0~^t^ | Q~3~^t+1^ | Q~2~^t+1^ | Q~1~^t+1^ | Q~0~^t+1^ | Exits |
 |:-------:|:-------:|:-------:|:-------:|:---------:|:---------:|:---------:|:--------:|:------:|
