--- a/src/entry_cbb.qmd
+++ b/src/entry_cbb.qmd
@@ -1,4 +1,4 @@
-# Diagrame Karnaugh si ecuatiile rezultate pentru intrarile CBB-urilor
+# Diagrame Karnaugh și ecuațiile rezultate pentru intrările CBB-urilor
 
 Mențiune: În acest capitol am adăugat părți ale circuitului complet în cadrul fiecărui subcapitol, pentru a ușura vizualizarea lor, însă acestea diferă 
 puțin de implementarea lor actuală. Circuitul complet utilizează magistrale pentru $\overline{Q_i},\ i=\overline{0,3}$, dar secvențele din subcapitole 
